--- a/resources/styles/components/_navigation.scss
+++ b/resources/styles/components/_navigation.scss
@@ -5,8 +5,10 @@
   }
 }
 
-.is-arrowless::after {
-  display: none;
+.is-arrowless {
+  &::after {
+    display: none;
+  }
   padding-right: 0.75rem !important;
 }
 
