--- a/resources/styles/_forum.scss
+++ b/resources/styles/_forum.scss
@@ -101,7 +101,7 @@
 div.bbp-template-notice {
     border-left-color: var(--yzfy-scheme-color);
     font-size: 1rem;
-    @apply mb-4 rounded-md border border-gray-100 shadow-md !important;
+    @apply mb-4 rounded-md border border-black shadow-md !important;
 }
 
 .bbp-topic-permalink,
