--- a/resources/styles/editor.scss
+++ b/resources/styles/editor.scss
@@ -21,18 +21,18 @@
 @import 'components/footer';
 @import 'components/gutenberg';
 @import 'components/wp-classes';
+@import 'components/clips';
 @import 'components/related-pages';
 @import 'components/_navigation';
 @import 'components/_typography';
 @import 'components/_pages-list';
-@import 'components/clips';
 @import 'layouts/header';
 @import 'layouts/sidebar';
 @import 'layouts/footer';
 @import 'layouts/pages';
 @import 'layouts/posts';
 @import 'layouts/tinymce';
-// @import "pages/home";
+// @import 'pages/home';
 @import 'pages/post';
 
 @import 'forum';
@@ -41,3 +41,26 @@
 @import '~tailwindcss/base';
 @import '~tailwindcss/components';
 @import '~tailwindcss/utilities';
+
+.wp-block {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.editor-styles-wrapper {
+  @apply prose max-w-none font-sans 2xl:prose-lg text-black;
+}
+
+.wp-block-button__link {
+  height: auto !important;
+}
+
+.editor-visual-editor a {
+  color: inherit;
+  text-decoration: none !important;
+}
+
+.editor-post-title__input {
+  @apply text-4xl bg-[#f5f5f5] rounded p-4 mt-16 mb-12 font-normal;
+}
