--- a/resources/styles/components/_gutenberg.scss
+++ b/resources/styles/components/_gutenberg.scss
@@ -15,7 +15,21 @@
   }
 }
 
+.wp-block-media-text {
+  margin: 3rem 0;
+  gap: 2rem;
+}
 
-.wp-block-media-text { 
-  margin:4rem 0;
+.wp-block-media-text h1,
+.wp-block-media-text h2,
+.wp-block-media-text h3,
+.wp-block-media-text h4,
+.wp-block-media-text h5,
+.wp-block-media-text h6 {
+  margin-top: 0;
+}
+
+.wp-block-media-text > .wp-block-media-text__content {
+  padding-left: 0;
+  padding-right: 0;
 }
